# opendev_api

./: README.md  main.py  pyproject.toml
.cursor/: mcp.json
app/: dashboard.py
docs/: dashboard_db_analysis.md
sample/: run_create_user_info_table.py
src/opendev_api/: __init__.py  _db_utils.py  client.py  developers.py  ecosystems.py  get_user_info.py
src/opendev_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_client.py  test_developers.py  test_ecosystems.py
