[project]
name = "opendev-api"
version = "0.1.0"
description = "python package for working with opendev data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "pandas>=2.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = ["opendev-api"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dashboard = ["streamlit>=1.40.0", "plotly>=5.24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
